# mystem

./: .gitignore  LICENSE  README.md  mystem.cabal
app/: Main.hs
src/: Mystem.hs
src/Mystem/: IO.hs  Parser.hs  Types.hs
src/NLP/: Mystem.hs
src/NLP/Mystem/: IO.hs  Parser.hs  Types.hs
